# llm-benchmark

./: .env.example  .gitignore  README.md  RESULTS.md  models.yaml  pyproject.toml
harness/: agentic_codegen.py  check_codegen.py  check_tasks.py  private_tasks.py  single_shot.py
scripts/: preflight.py  run_sweep.py  serve_local_vllm.sh  smoke.sh  summarize.py
tasks/: README.md
tasks/calc-power-assoc-001/: Dockerfile  meta.yaml  problem.md
tasks/calc-power-assoc-001/hidden_tests/: test_power_assoc.py
tasks/calc-power-assoc-001/repo/: README.md
tasks/conv1d-torch-003/: meta.yaml  problem.md
tasks/csv-line-002/: Dockerfile  meta.yaml  problem.md
tasks/csv-line-002/repo/: README.md
tasks/dct2-ortho-003/: meta.yaml  problem.md
tasks/gru-stream-002/: Dockerfile  meta.yaml  problem.md
tasks/gru-stream-002-us/: meta.yaml  problem.md
tasks/ini-parse-002/: Dockerfile  meta.yaml  problem.md
tasks/interp1d-align-003/: meta.yaml  problem.md
tasks/interval-merge-002/: Dockerfile  meta.yaml  problem.md
tasks/istft-cola-002/: compose.yaml  meta.yaml  problem.md
tasks/istft-cola-002-us/: meta.yaml  problem.md
tasks/lru-cache-002/: Dockerfile  compose.yaml  meta.yaml  problem.md
tasks/mel-filterbank-003/: meta.yaml  problem.md
tasks/money-split-002/: Dockerfile  meta.yaml  problem.md
tasks/qgemm-int8-sym-001/: meta.yaml  problem.md
tasks/qgemm-int8-sym-001-us/: meta.yaml  problem.md
tasks/qlinear-matmul-i8-002/: meta.yaml  problem.md
tasks/qlinear-matmul-i8-002-us/: meta.yaml  problem.md
tasks/topo-sort-002/: Dockerfile  meta.yaml  problem.md
(+57 files in other folders)
